

include_directories(
    ${CMAKE_CURRENT_SOURCE_DIR}/graphalgorithms
    ${CMAKE_CURRENT_SOURCE_DIR}/preprocessing
    ${CMAKE_CURRENT_SOURCE_DIR}/structures
    ${CMAKE_CURRENT_SOURCE_DIR}/utils
)

# add_subdirectory(graphalgorithms)
# add_subdirectory(preprocessing)
# add_subdirectory(structures)
# add_subdirectory(utils)